# SP-Loop

./: README  README.md
camera_models/: CMakeLists.txt
config/: vins_rviz_config.rviz  vins_rviz_config2.rviz
config/euroc/: euroc_sp_loop.yaml  euroc_stereo_config.yaml
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/src/: SuperGlue.cpp  SuperGlue.h  keyframe_sp.cpp  pnp_factor.h  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp  sp_pose_graph.h  triangulate_factor.h  triangulate_factor2.h  triangulate_factor3.h
loop_fusion/src/utility/: utility.h
offline_model_training/: CMakeLists.txt
offline_model_training/include/: SuperGlue.h  SuperPoint.h
offline_model_training/src/: SPmatcher.cpp  SuperGlue.cpp  SuperPoint.cpp  gen_voc.cpp  sp.cpp
spVINS_FUSION/camera_models/src/camera_models/: CameraFactory.cc
spVINS_FUSION/config/: vins_rviz_config.rviz
spVINS_FUSION/config/euroc/: euroc_stereo_config.yaml
spVINS_FUSION/config/realsense_d435i/: left.yaml  realsense_stereo_imu_config.yaml  realsense_stereo_imu_config2.yaml
spVINS_FUSION/global_fusion/: CMakeLists.txt
spVINS_FUSION/loop_fusion/: CMakeLists.txt  package.xml
spVINS_FUSION/loop_fusion/src/: SuperGlue.cpp  SuperGlue.h  keyframe.cpp  keyframe.h  keyframe_sp.cpp  keyframe_sp.h  parameters.h  pose_graph.cpp  pose_graph_node.cpp  sp_pose_graph.cpp  sp_pose_graph.h  sp_pose_graph_node.cpp
spVINS_FUSION/loop_fusion/src/utility/: CameraPoseVisualization.cpp  CameraPoseVisualization.h
spVINS_FUSION/vins_estimator/: CMakeLists.txt  package.xml
spVINS_FUSION/vins_estimator/launch/: run_d435i_bag_vins.launch  run_euroc_bag.launch
spVINS_FUSION/vins_estimator/src/: rosNodeTest.cpp
spVINS_FUSION/vins_estimator/src/estimator/: estimator.cpp  feature_manager.cpp  parameters.cpp  parameters.h
spVINS_FUSION/vins_estimator/src/featureTracker/: feature_tracker.cpp  feature_tracker.h
spVINS_FUSION/vins_estimator/src/superPoint/: SuperPoint.cpp  SuperPoint.h
spVINS_FUSION/vins_estimator/src/utility/: visualization.cpp  visualization.h
vins_estimator/launch/: run_d435i_bag.launch  run_euroc_bag_multi.launch  run_euroc_bag_vins.launch
vins_estimator/msg/: featurePerId.msg  features.msg
vins_estimator/src/: sp_test.cpp
vins_estimator/src/estimator/: estimator.h  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/featureTracker/: feature_tracker.cpp
vins_estimator/src/superPoint/: SuperPoint.cpp
vins_estimator/src/utility/: utility.h  visualization.h
